--- a/src/style.css
+++ b/src/style.css
@@ -1,91 +1,108 @@
-
-@media (max-width: 650px) {
-.bodystyle {
-background: url('media/gif1.gif');
-size: cover;
-
-}
-}
-
-
-@media only screen and (max-width:650px) {
-  .btn-nav {
-    margin-top: -50%;
-  }
-  .slider {
-    display: none;
+@media only screen and (max-width:850px) {
+  .container {
+    padding-top: 50%;
   }
 
 }
 
 
 .btn-nav {
- 
-  margin-top: -20%;
-  margin-left: -45%;
-   border-style: none;
-    Font-Family: 'Varela Round', Sans-Serif;
-    font-size: 18px;
-    position: absolute;
-   background-color: #ffddd200;
-    width: 180px;
-    height: 30px;
-    box-align: left;
-    color: rgba(0, 0, 0, 0.555);
 
+  border-style: none;
+  Font-Family: 'Varela Round', Sans-Serif;
+  font-size: 18px;
+  position: relative;
+
+  background-color: #ffd2ec9d;
+  width: 160px;
+  height: 30px;
+  float: left;
+  color: rgba(0, 0, 0, 0.555);
+  border-radius: 5px;
 }
 
 .btn-nav:hover {
-   box-shadow: 0 4px 16px #ffddd2;
-    transition: all 0.3s ease;
+  box-shadow: 0 4px 16px #ffddd2;
+  transition: all 0.3s ease;
 }
+
 .btn-start {
   width: 180px;
   height: 50px;
   border-radius: 15px;
   border-width: 5px;
   color: #e7cce4;
-  border-color: #59268a;
-   color: #240046;
-  background-color: #e7cce4;
+  border-color: #842bd6;
+  color: #5707a1;
+  background-color: #f7b5ef;
   Font-Family: 'Varela Round', Sans-Serif;
- font-size: 20px;
- margin-bottom: 5%;
+  font-size: 20px;
+  margin-bottom: 5%;
 }
 
-.btn-start:hover{
- 
-    color:#ffddd2;
-    box-shadow: 0 10px 16px #e7cce4;
-    transition: all 0.3s ease;
-    background-color: #240046;
+.btn-start:hover {
+
+  color: #ffddd2;
+  box-shadow: 0 10px 16px #e7cce4;
+  transition: all 0.3s ease;
+  background-color: #460b7c;
+  ;
 
 }
-.bodystyle {
+
+body {
   margin: 0;
   padding: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #240046;
+  background: linear-gradient(90deg, #7b2cbf, #9d4edd, #c77dff, #c77dff);
 }
+
+
+@media (max-width: 850px) {
+  body {
+    background: url(media/phone1.jpg)
+  }
+
+  .container {
+
+    background-color: rgba(0, 0, 12, 0.459);
+    border-radius: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 50%;
+    color: #e7cce4;
+    align-items: center;
+    object-position: center;
+    padding-top: 20%;
+
+  }
+
+
+  .slider {
+    display: none;
+  }
+}
+
+
 /* comienza clase del slider */
 .slider {
   width: 100%;
-  height: 120%;
+  height: relative;
   overflow: hidden;
   position: absolute;
   background-attachment: fixed;
   size: cover;
-  margin-top: -10%;
-
+  margin-top: 10%;
+  margin-bottom: 20%;
 }
 
 .slides {
   width: 500%;
   height: 500px;
-display: flex;
+  display: flex;
 }
 
 .slides input {
@@ -95,7 +112,7 @@ display: flex;
 .slide {
   width: 20%;
   transition: 2s;
-  
+
 }
 
 .slide img {
@@ -104,14 +121,14 @@ display: flex;
   size: cover;
   background-attachment: fixed;
 }
- 
+
 .navegacion-manual {
-   position: absolute;
-   width: 100%;
-   margin-top: -50px;
-   display: flex;
-   justify-content: center;
- }
+  position: absolute;
+  width: 100%;
+  margin-top: -50px;
+  display: flex;
+  justify-content: center;
+}
 
 .manual-btn {
   border: 2px solid lightblue;
@@ -129,70 +146,72 @@ display: flex;
   background: lightblue;
 }
 
- #radio1:checked~ .uno {
-   margin-left: 0;
- }
+#radio1:checked~.uno {
+  margin-left: 0;
+}
 
-#radio2:checked~ .uno {
-   margin-left: -20%;
- }
- #radio3:checked~ .uno {
-   margin-left: -40%;
- }
- #radio4:checked~ .uno {
-   margin-left: -60%;
- }
+#radio2:checked~.uno {
+  margin-left: -20%;
+}
+
+#radio3:checked~.uno {
+  margin-left: -40%;
+}
+
+#radio4:checked~.uno {
+  margin-left: -60%;
+}
+
 /*Contenido textual de la pagina*/
 
 .container {
-  padding-block-start: 3px;
-  position: absolute;
-  margin-top: 40%;
-  width: 100%;
-  height: 70%;
-  background-color: #240046;
-  color: #e7cce4;
 
- align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 50%;
+  color: #f5e1f2;
+  align-items: center;
+  object-position: center;
+  padding-top: 20%;
 
- 
 }
 
 
 
 .titulo {
   Font-Family: 'Varela Round', Sans-Serif;
-Font-Size: 48px;
+  Font-Size: 48px;
 }
 
 .texto {
- Font-Family: 'Muli', Sans-Serif;
-Font-Size: 16px;
+  Font-Family: 'Muli', Sans-Serif;
+  Font-Size: 16px;
 }
 
 .diviertete {
-Font-Family: 'Varela Round', Sans-Serif;
-Font-Size: 38px;
+  Font-Family: 'Varela Round', Sans-Serif;
+  Font-Size: 38px;
 }
 
 .cita {
-Font-Family: 'Muli', Sans-Serif;
-Font-Size: 12px;
-height: 50px;
-background-color: rgba(24, 36, 105, 0);
-border-radius: 25px;
+  Font-Family: 'Muli', Sans-Serif;
+  Font-Size: 12px;
+  height: 50px;
+  background-color: rgba(24, 36, 105, 0);
+  border-radius: 20px;
 }
 
 .cita:hover {
-  
-    transition: all 0.3s ease;
-    background-color: #e7cce4;
-    box-shadow: 0 6px 14px #e7cce4;
-    transition: all 0.3s ease;
-    color: #240046;
-  width: 40%;
+
+  transition: all 0.3s ease;
+  background-color: #e7cce4;
+  box-shadow: 0 6px 14px #e7cce4;
+  transition: all 0.3s ease;
+  color: #240046;
+  width: 50%;
 }
- p {
+
+p {
   animation-duration: 3s;
   animation-name: slidein;
 }
@@ -223,63 +242,64 @@ border-radius: 25px;
 */
 
 
- /*ventana modal */
-	.modalContainer {
-			display: none; 
-			position: fixed; 
-			z-index: 1;
-			padding-top: 100px;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%; 
-			overflow: auto; 
-			background-color: rgb(0,0,0);
-			background-color: rgba(0,0,0,0.4);
-      
-		}
+/*ventana modal */
+.modalContainer {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 
-    .sobre-studio {
-      color: rgb(105, 24, 69);
-  }
+}
 
- 
+.sobre-studio {
+  color: rgb(105, 24, 69);
+}
 
-		.modalContainer .modal-content {
-      
-      Font-Family: 'Muli', Sans-Serif;
-      align-items: center;
-       background-color:  #e7cce4;
-    transition: all 0.3s ease;
-    color: #240046;
-			margin: auto;
-			padding: 20px;
-			border: 1px solid lightgray;
-			border-top: 10px solid #b33d8f;
-			width: 50%;
-      border-radius: 20px;
-		}
 
-		.modalContainer .close {
-			color: #aaaaaa;
-			float: right;
-			font-size: 28px;
-			font-weight: bold;
-		}
 
-		.modalContainer .close:hover,
-		.modalContainer .close:focus {
-			color: #000;
-			text-decoration: none;
-			cursor: pointer;
-		}
+.modalContainer .modal-content {
+
+  Font-Family: 'Muli', Sans-Serif;
+  align-items: center;
+  background-color: #e7cce4;
+  transition: all 0.3s ease;
+  color: #240046;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid lightgray;
+  border-top: 10px solid #b33d8f;
+  width: 50%;
+  border-radius: 20px;
+}
+
+.modalContainer .close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.modalContainer .close:hover,
+.modalContainer .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /*fin ventana modal */
-    a {
-      text-decoration: none;
-      color: rgb(105, 24, 69) ;
-    }
+a {
+  text-decoration: none;
+  color: rgb(105, 24, 69);
+}
 
-  
+
 #mySidenav a {
   position: absolute;
   left: -80px;
@@ -294,10 +314,10 @@ border-radius: 25px;
 
 #mySidenav a:hover {
   left: 0;
-   color:#ffddd2;
-    box-shadow: 0 10px 16px #e7cce4;
-    transition: all 0.3s ease;
-    background-color: #240046;
+  color: #ffd2ec;
+  box-shadow: 0 10px 16px #e7cce4;
+  transition: all 0.3s ease;
+  background-color: #460b7c;
 
 }
 
