--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,3 @@
-@media only screen and (max-width:850px) {
-  .container {
-    padding-top: 50%;
-  }
-
-}
-
 
 .btn-nav {
 
@@ -16,7 +9,7 @@
   background-color: #ffd2ec9d;
   width: 160px;
   height: 30px;
-  float: left;
+  align-self: left;
   color: rgba(0, 0, 0, 0.555);
   border-radius: 5px;
 }
@@ -51,39 +44,64 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0%;
+  padding: 0px;
+  height: 50%;
   height: 100vh;
-  display: flex;
+  line-height: 1.5em;
+/* display: flex;
   justify-content: center;
-  align-items: center;
+  place-items: center;*/
   background: linear-gradient(90deg, #7b2cbf, #9d4edd, #c77dff, #c77dff);
 }
 
-
-@media (max-width: 850px) {
+@media (max-width: 990px) {
   body {
-    background: url(media/phone1.jpg)
+    background: url(media/phone1.jpg);
+    
   }
 
-  .container {
+  .container1 {
 
     background-color: rgba(0, 0, 12, 0.459);
     border-radius: 10%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 50%;
+    
     color: #e7cce4;
-    align-items: center;
-    object-position: center;
-    padding-top: 20%;
-    margin-bottom: 5%;
+    align-items: auto;
+   object-position: center;
+   min-width:80%;
+   min-height: 80%;
+    padding-bottom: 5%;
+   margin-left: 0%;
+   margin-right:0%;
+  }
+
+ 
+  .titulo {
+    padding: 5px;
+    height:  100%;
+    width: 100%;
+    text-size-adjust: auto;
+    font-size: 40px;
+    
   }
 
 
+#mySidenav a {
+  margin-top: -10%;
+  padding-bottom: -10%;
+}
   .slider {
     display: none;
   }
+ .modalContainer .modal-content  {
+   width: 70%;
+ }
+
+ .modal-footer{
+   display: none;
+ }
+
 }
 
 
@@ -95,8 +113,9 @@ body {
   position: absolute;
   background-attachment: fixed;
   size: cover;
-  margin-top: 10%;
+  margin-top: 0%;
   margin-bottom: 20%;
+
 }
 
 .slides {
@@ -164,19 +183,17 @@ body {
 
 /*Contenido textual de la pagina*/
 
-.container {
+.container1 {
 
-  margin-left: 10%;
+  margin-left: 15%;
   margin-right: 10%;
-  margin-top: 50%;
+  margin-top: 30%;
   color: #f5e1f2;
   align-items: center;
   object-position: center;
-  padding-top: 20%;
+  padding-top: 10%;
 
 }
-
-
 
 .titulo {
   Font-Family: 'Varela Round', Sans-Serif;
@@ -211,7 +228,7 @@ body {
   width: 50%;
 }
 
-p {
+.container-texto{
   animation-duration: 3s;
   animation-name: slidein;
 }
@@ -228,23 +245,9 @@ p {
   }
 }
 
-
-
-
-/*
-
-.btn-start:hover {
-    color: rgba(255, 255, 255, 1) !important;
-    box-shadow: 0 4px 16px #eacacad7;
-    transition: all 0.3s ease;
-    background-color: teal;
-}
-*/
-
-
 /*ventana modal */
 .modalContainer {
-  display: none;
+ display: none;
   position: fixed;
   z-index: 1;
   padding-top: 100px;
@@ -258,6 +261,10 @@ p {
 
 }
 
+.modal-footer {
+text-decoration: none;
+}
+
 .sobre-studio {
   color: rgb(105, 24, 69);
 }
@@ -269,14 +276,15 @@ p {
   Font-Family: 'Muli', Sans-Serif;
   align-items: center;
   background-color: #e7cce4;
-  transition: all 0.3s ease;
+  /*transition: all 0.3s ease;*/
   color: #240046;
   margin: auto;
   padding: 20px;
   border: 1px solid lightgray;
   border-top: 10px solid #b33d8f;
-  width: 50%;
+  width: 60%;
   border-radius: 20px;
+  
 }
 
 .modalContainer .close {
