--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,6 @@
-
 .btn-nav {
-
   border-style: none;
-  Font-Family: 'Varela Round', Sans-Serif;
+  font-family: "Varela Round", Sans-Serif;
   font-size: 18px;
   position: relative;
 
@@ -24,86 +22,84 @@
   height: 50px;
   border-radius: 15px;
   border-width: 5px;
-  color: #e7cce4;
-  border-color: #842bd6;
-  color: #5707a1;
-  background-color: #f7b5ef;
-  Font-Family: 'Varela Round', Sans-Serif;
+  border-color: #ffffff;
+  color: #fafafa;
+  background-color: #f7b5ef00;
+  font-family: "Varela Round", Sans-Serif;
   font-size: 20px;
   margin-bottom: 5%;
 }
 
 .btn-start:hover {
-
   color: #ffddd2;
-  box-shadow: 0 10px 16px #e7cce4;
+  box-shadow: 0 10px 20px #e7cce4;
   transition: all 0.3s ease;
-  background-color: #460b7c;
-  ;
-
+  background-color: #b982c2;
 }
 
-body {
+.body-style {
   margin: 0%;
   padding: 0px;
   height: 50%;
   height: 100vh;
   line-height: 1.5em;
-/* display: flex;
+  /* display: flex;
   justify-content: center;
   place-items: center;*/
-  background: linear-gradient(90deg, #7b2cbf, #9d4edd, #c77dff, #c77dff);
+  background: linear-gradient(90deg, #b982c2, #f0a7a7, #e7b4d4);
 }
 
 @media (max-width: 990px) {
-  body {
+  .body-style {
     background: url(media/phone1.jpg);
-    
   }
 
   .container1 {
-
     background-color: rgba(0, 0, 12, 0.459);
     border-radius: 10%;
-    
     color: #e7cce4;
     align-items: auto;
-   object-position: center;
-   min-width:80%;
-   min-height: 80%;
+    object-position: center;
+    width: 85%;
+    min-height: 90%;
     padding-bottom: 5%;
-   margin-left: 0%;
-   margin-right:0%;
+    padding-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
- 
+  .container-texto {
+    padding: 5px;
+  }
+
   .titulo {
     padding: 5px;
-    height:  100%;
+    height: 100%;
     width: 100%;
     text-size-adjust: auto;
     font-size: 40px;
-    
+    line-height: 40px;
   }
 
+  .cita:hover {
+    display: none;
+  }
 
-#mySidenav a {
-  margin-top: -10%;
-  padding-bottom: -10%;
-}
+  .sidenav a {
+    margin-top: -23%;
+    position: fixed;
+  }
   .slider {
     display: none;
   }
- .modalContainer .modal-content  {
-   width: 70%;
- }
+  .modalContainer .modal-content {
+    width: 70%;
+  }
 
- .modal-footer{
-   display: none;
- }
-
+  .modal-footer {
+    display: none;
+  }
 }
-
 
 /* comienza clase del slider */
 .slider {
@@ -115,7 +111,6 @@ body {
   size: cover;
   margin-top: 0%;
   margin-bottom: 20%;
-
 }
 
 .slides {
@@ -131,7 +126,6 @@ body {
 .slide {
   width: 20%;
   transition: 2s;
-
 }
 
 .slide img {
@@ -165,70 +159,67 @@ body {
   background: lightblue;
 }
 
-#radio1:checked~.uno {
+#radio1:checked ~ .uno {
   margin-left: 0;
 }
 
-#radio2:checked~.uno {
+#radio2:checked ~ .uno {
   margin-left: -20%;
 }
 
-#radio3:checked~.uno {
+#radio3:checked ~ .uno {
   margin-left: -40%;
 }
 
-#radio4:checked~.uno {
+#radio4:checked ~ .uno {
   margin-left: -60%;
 }
 
 /*Contenido textual de la pagina*/
 
 .container1 {
-
-  margin-left: 15%;
-  margin-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 30%;
   color: #f5e1f2;
   align-items: center;
   object-position: center;
   padding-top: 10%;
-
 }
 
 .titulo {
-  Font-Family: 'Varela Round', Sans-Serif;
-  Font-Size: 48px;
+  font-family: "Varela Round", Sans-Serif;
+  font-size: 48px;
 }
 
 .texto {
-  Font-Family: 'Muli', Sans-Serif;
-  Font-Size: 16px;
+  font-family: "Muli", Sans-Serif;
+  font-size: 16px;
 }
 
 .diviertete {
-  Font-Family: 'Varela Round', Sans-Serif;
-  Font-Size: 38px;
+  font-family: "Varela Round", Sans-Serif;
+  font-size: 38px;
 }
 
 .cita {
-  Font-Family: 'Muli', Sans-Serif;
-  Font-Size: 12px;
+  font-family: "Muli", Sans-Serif;
+  font-size: 12px;
   height: 50px;
   background-color: rgba(24, 36, 105, 0);
   border-radius: 20px;
 }
 
 .cita:hover {
-
   transition: all 0.3s ease;
   background-color: #e7cce4;
   box-shadow: 0 6px 14px #e7cce4;
   transition: all 0.3s ease;
-  color: #240046;
+  color:#b982c2;
   width: 50%;
 }
 
-.container-texto{
+.container-texto {
   animation-duration: 3s;
   animation-name: slidein;
 }
@@ -236,7 +227,7 @@ body {
 @keyframes slidein {
   from {
     margin-left: 100%;
-    width: 300%
+    width: 300%;
   }
 
   to {
@@ -247,7 +238,7 @@ body {
 
 /*ventana modal */
 .modalContainer {
- display: none;
+  display: none;
   position: fixed;
   z-index: 1;
   padding-top: 100px;
@@ -258,37 +249,32 @@ body {
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-
 }
 
 .modal-footer {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .sobre-studio {
   color: rgb(105, 24, 69);
 }
 
-
-
 .modalContainer .modal-content {
-
-  Font-Family: 'Muli', Sans-Serif;
+  font-family: "Varela Round", Sans-Serif;
   align-items: center;
-  background-color: #e7cce4;
-  /*transition: all 0.3s ease;*/
-  color: #240046;
+  background: linear-gradient(90deg, #c77dff, #c77dff);
+  transition: all 0.3s ease;
+  color: #ffffff;
   margin: auto;
   padding: 20px;
   border: 1px solid lightgray;
-  border-top: 10px solid #b33d8f;
+  border-top: 10px solid #ffaff2;
   width: 60%;
   border-radius: 20px;
-  
 }
 
 .modalContainer .close {
-  color: #aaaaaa;
+  color: #4b4a4a;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -296,40 +282,312 @@ text-decoration: none;
 
 .modalContainer .close:hover,
 .modalContainer .close:focus {
-  color: #000;
+  color: rgb(250, 243, 243);
   text-decoration: none;
   cursor: pointer;
 }
 
 /*fin ventana modal */
-a {
+#sitio-estudio {
   text-decoration: none;
   color: rgb(105, 24, 69);
 }
-
-
-#mySidenav a {
+/*
+a {
+  text-decoration: none;
+}
+*/
+.sidenav a {
   position: absolute;
   left: -80px;
   transition: 0.3s;
   padding: 15px;
   width: 100px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 15px;
   color: white;
   border-radius: 0 5px 5px 0;
+  font-family: "Varela Round", Sans-Serif;
 }
 
-#mySidenav a:hover {
+.sidenav a:hover {
   left: 0;
-  color: #ffd2ec;
+  color: #ad4bfd;
   box-shadow: 0 10px 16px #e7cce4;
   transition: all 0.3s ease;
   background-color: #460b7c;
-
 }
 
 #contact {
   top: 200px;
   background-color: #e7cce4;
+}
+
+/*estilos aplicados en Data.html */
+
+.body-data {
+  margin: 0%;
+  padding: 0px;
+  margin-top: 0%;
+  height: 100vh;
+  line-height: 1.5em;
+  background-color: rgb(241, 198, 245);
+  box-sizing: border-box;
+}
+
+/*estilos aplicados a las tarjetas de peliculas*/
+.row {
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+  margin-left: 5%;
+
+  margin-top: 10%;
+}
+
+.colum {
+  flex: 20%;
+  padding: 15px;
+}
+
+.card{
+background: rgba(255, 255, 255, 0.548);
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 3.0px );
+-webkit-backdrop-filter: blur( 3.0px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+text-align: center;
+width: 300px;
+height: 480px;
+}
+
+
+.card:hover {
+  transition: all 0.3s ease;
+  padding: 30px 0px;
+  background-color: #dbc1e0;
+  box-shadow: 0 10px 20px #a7619e;
+}
+
+
+
+.btn-card{
+font-family: "Varela Round", Sans-Serif;
+width: auto;
+height: 35px;
+top: -10%;
+float: center;
+position: relative;
+border-radius: 10px;
+text-decoration: bold;
+ border-color: #7a5f96;
+  color: #7a5f96;
+  background-color: #f7b5ef00;
+
+}
+
+.btn-card:hover {
+  color: #ffddd2;
+  box-shadow: 0 10px 16px #eca4e4;
+  transition: all 0.3s ease;
+  background-color: #8133ca;
+}
+
+
+.card-body{
+padding: auto;
+position: relative;
+}
+
+.card-title{
+font-family: "Varela Round", Sans-Serif;
+font-size: 16px;
+padding-bottom: 0%;
+}
+
+.img-top {
+  width: 80%;
+  padding-top: 10px;
+
+}
+
+@media (min-width: 610px) {
+  .colum {
+    flex: 30%;
+  }
+}
+@media (max-width: 550px) {
+  .colum {
+    flex: 40%;
+  }
+  .header-text{
+    line-height: 36px;
+  }
+}
+
+
+@media (min-width: 810px) {
+  .colum {
+    flex: 20%;
+  }
+}
+
+.container-header{
+  font-family: "Varela Round", Sans-Serif;
+  min-width: 100%;
+  min-height: 30%;
+  background: linear-gradient(90deg, #b982c2, #f0a7a7, #e7b4d4);
+margin-top: -2%;
+position:relative;
+}
+
+.header-text{
+  padding-top: 45px;
+}
+
+/*estilos para el menú lateral */
+
+.barra {
+  font-family: "Varela Round", Sans-Serif;
+  margin-top: -10%;
+  width: 5%;
+  height: 100vh;
+  min-width: 5%;
+  min-height: 100%;
+  position: absolute;
+  top: 25%;
+
+  transition: 0.4s all;
+
+  z-index: 1;
+}
+
+.barra ul {
+  padding: 0px;
+  text-align: center;
+
+  justify-items: center;
+}
+
+.barra li {
+  transition: 0.3s ease;
+  
+}
+
+.barra-item {
+  text-decoration: none;
+  list-style: none;
+  transition: 0.3s all;
+  font-size: 0px;
+  padding: 0px;
+  display: none;
+}
+
+.barra h2 {
+  text-align: center;
+  color: #252525;
+  padding: 7px;
+  margin-top: 20%;
+
+  font-size: 0px;
+}
+
+.barra img {
+  padding-top: 10px;
+  padding-left: 20px;
+  width: 30px;
+  height: 40px;
+  position: relative;
+  top: -5%;
+}
+
+@media (max-width: 810px) {
+  .barra img {
+    position: relative;
+    top: -25%;
+  }
+  .barra {
+    margin-top: -12%;
+    min-height: 100%;
+    min-width: 40%;
+  }
+}
+
+@media (max-width: 650px) {
+  .barra img {
+    top: -25%;
+    position: relative;
+  }
+  .barra {
+     margin-top: -15%;
+    min-height: 100%;
+    min-width: 50%;
+    
+
+  }
+}
+
+.barra:hover {
+  width: 30%;
+  height: 100%;
+  top: 17%;
+  bottom: 0;
+  padding-bottom: 36px;
+  position: absolute;
+
+  background-color: #F2D5F8;
+}
+
+.barra:hover h2 {
+  padding: 10px;
+  font-size: 36px;
+}
+
+.barra:hover a {
+  font-size: 20px;
+  color: #4b4a4a;
+  display: block;
+  padding: 20px;
+  width: auto;
+  height: auto;
+  text-decoration: bold;
+  
+}
+
+.barra:hover img {
+  height: 0%;
+}
+
+.barra:hover a:hover {
+  font-size: 25px;
+  padding: 30px 0px;
+  background-color: #dbc1e0;
+}
+
+.btn-inicio {
+  display: none;
+  width: 150px;
+  height: 50px;
+  border-radius: 15px;
+  border-width: 5px;
+  border-color: #b997da;
+  color: #b997da;
+  background-color: #f7b5ef00;
+  font-family: "Varela Round", Sans-Serif;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.btn-inicio:hover {
+  color: #ffddd2;
+  box-shadow: 0 10px 16px #e7cce4;
+  transition: all 0.3s ease;
+  background-color: #8133ca;
+}
+
+.barra:hover button {
+  display: block;
 }
