--- a/src/style.css
+++ b/src/style.css
@@ -444,8 +444,25 @@ position:relative;
 
 .header-text{
   padding-top: 45px;
+  color: white;
+}
+.conoce-peliculas{
+  color: white;
 }
 
+#totoro-header{
+  width: 250px;
+  height: 150px;
+  float: right;
+  margin-top: -12%;
+  margin-right: 5%;
+}
+
+@media (max-width:980px){
+  #totoro-header{
+    display: none;
+  }
+}
 /*estilos para el menú lateral */
 
 .barra {
@@ -497,7 +514,7 @@ position:relative;
   padding-top: 10px;
   padding-left: 20px;
   width: 30px;
-  height: 40px;
+  height: 20px;
   position: relative;
   top: -5%;
 }
@@ -512,6 +529,7 @@ position:relative;
     min-height: 100%;
     min-width: 40%;
   }
+ 
 }
 
 @media (max-width: 650px) {
@@ -523,9 +541,8 @@ position:relative;
      margin-top: -15%;
     min-height: 100%;
     min-width: 50%;
-    
-
   }
+
 }
 
 .barra:hover {
