--- a/src/style.css
+++ b/src/style.css
@@ -333,7 +333,56 @@ a {
   line-height: 1.5em;
   background-color: rgb(241, 198, 245);
   box-sizing: border-box;
+  font-family: "Varela Round", Sans-Serif;
+
 }
+
+/*estilos al botón de filtrado*/
+
+.hide {
+  max-height: 0 !important;
+}
+
+.dropdown{
+ width: 120px;
+  height: 40px;
+  border-radius: 15px;
+  border-width: 5px;
+  border-color: #b997da;
+  color: #683897;
+  background-color: #f7b5e9e3;
+  font-family: "Varela Round", Sans-Serif;
+margin-bottom: 1em;
+margin-top: 2%;
+float: right;
+margin-right: 2%;
+}
+
+.dropdown .title{
+	width: 100%;
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+.dropdown .menu{
+	transition: max-height .5s ease-out;
+	max-height: 20em;
+	overflow: hidden;
+}
+.dropdown .menu .option{
+	margin: .3em .3em .3em .3em;
+	margin-top: 0.3em;
+}
+
+.dropdown .menu .option:hover{
+	background: rgba(0,0,0,0.2);
+}
+
+.pointerCursor:hover{
+	cursor: pointer;
+}
+
 
 /*estilos aplicados a las tarjetas de peliculas*/
 .row {
@@ -347,7 +396,8 @@ a {
 
 .colum {
   flex: 20%;
-  padding: 15px;
+  padding: 25px;
+  
 }
 
 .card{
@@ -358,14 +408,20 @@ backdrop-filter: blur( 3.0px );
 border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );
 text-align: center;
-width: 300px;
+width: 100%;
+height: 100%;
+margin-bottom: 10px;
+min-width: 200px;
+
+/*width: 300px;
 height: 480px;
+*/
 }
 
 
 .card:hover {
   transition: all 0.3s ease;
-  padding: 30px 0px;
+  padding: 10px 0px;
   background-color: #dbc1e0;
   box-shadow: 0 10px 20px #a7619e;
 }
@@ -412,14 +468,11 @@ padding-bottom: 0%;
 
 }
 
-@media (min-width: 610px) {
-  .colum {
-    flex: 30%;
-  }
-}
+
 @media (max-width: 550px) {
   .colum {
-    flex: 40%;
+    flex: 20%;
+    min-width: 190px;
   }
   .header-text{
     line-height: 36px;
@@ -451,8 +504,8 @@ position:relative;
 }
 
 #totoro-header{
-  width: 250px;
-  height: 150px;
+  width: 18%;
+  height: 20%;
   float: right;
   margin-top: -12%;
   margin-right: 5%;
