--- a/src/style.css
+++ b/src/style.css
@@ -190,6 +190,7 @@
 .titulo {
   font-family: "Varela Round", Sans-Serif;
   font-size: 48px;
+  color: linear-gradient(90deg, #b982c2, #f0a7a7, #e7b4d4);
 }
 
 .texto {
@@ -206,28 +207,13 @@
   font-family: "Muli", Sans-Serif;
   font-size: 12px;
   height: 50px;
-  background-color: rgba(24, 36, 105, 0);
   border-radius: 20px;
-}
-
-.cita:hover {
-  transition: all 0.3s ease;
-  background-color: #e7cce4;
-  box-shadow: 0 6px 14px #e7cce4;
-  transition: all 0.3s ease;
-  color:#b982c2;
-  width: 50%;
-}
-
-.container-texto {
-  animation-duration: 3s;
-  animation-name: slidein;
 }
 
 @keyframes slidein {
   from {
     margin-left: 100%;
-    width: 300%;
+    width: 200%;
   }
 
   to {
@@ -238,90 +224,64 @@
 
 /*ventana modal */
 .modalContainer {
-  display: none;
-  position: fixed;
+
+  position: absolute;
   z-index: 1;
-  padding-top: 100px;
+  padding-top: 90px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: scroll;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-}
+  display: flex;
+  flex-wrap: wrap;
 
-.modal-footer {
-  text-decoration: none;
-}
-
-.sobre-studio {
-  color: rgb(105, 24, 69);
+  margin-bottom: -10%;
 }
 
 .modalContainer .modal-content {
-  font-family: "Varela Round", Sans-Serif;
-  align-items: center;
-  background: linear-gradient(90deg, #c77dff, #c77dff);
-  transition: all 0.3s ease;
-  color: #ffffff;
+  background: rgba(255, 255, 255, 0.856);
+
   margin: auto;
   padding: 20px;
-  border: 1px solid lightgray;
-  border-top: 10px solid #ffaff2;
-  width: 60%;
+
+  border-top: 10px;
   border-radius: 20px;
+  width: 60%;
+  height: 65%;
+  min-height: 65%;
+  min-width: 60%;
+ 
+  animation-duration: 2s;
+  animation-name: slidein;
 }
 
 .modalContainer .close {
-  color: #4b4a4a;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  width: 150px;
+  height: 50px;
+  border-radius: 15px;
+  border-width: 5px;
+  border-color: #b997da;
+  color: #b997da;
+  background-color: #f7b5ef00;
+  font-family: "Varela Round", Sans-Serif;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
 
 .modalContainer .close:hover,
 .modalContainer .close:focus {
-  color: rgb(250, 243, 243);
-  text-decoration: none;
-  cursor: pointer;
+  color: #ffddd2;
+  box-shadow: 0 10px 16px #e7cce4;
+  transition: all 0.3s ease;
+  background-color: #8133ca;
 }
 
 /*fin ventana modal */
-#sitio-estudio {
-  text-decoration: none;
-  color: rgb(105, 24, 69);
-}
-/*
-a {
-  text-decoration: none;
-}
-*/
-.sidenav a {
-  position: absolute;
-  left: -80px;
-  transition: 0.3s;
-  padding: 15px;
-  width: 100px;
-  text-decoration: none;
-  font-size: 15px;
-  color: white;
-  border-radius: 0 5px 5px 0;
-  font-family: "Varela Round", Sans-Serif;
-}
-
-.sidenav a:hover {
-  left: 0;
-  color: #ad4bfd;
-  box-shadow: 0 10px 16px #e7cce4;
-  transition: all 0.3s ease;
-  background-color: #460b7c;
-}
-
-#contact {
-  top: 200px;
-  background-color: #e7cce4;
-}
 
 /*estilos aplicados en Data.html */
 
@@ -334,17 +294,12 @@ a {
   background-color: rgb(241, 198, 245);
   box-sizing: border-box;
   font-family: "Varela Round", Sans-Serif;
-
 }
 
 /*estilos al botón de filtrado*/
 
-.hide {
-  max-height: 0 !important;
-}
-
-.dropdown{
- width: 120px;
+#BtnFilter {
+  width: 120px;
   height: 40px;
   border-radius: 15px;
   border-width: 5px;
@@ -352,37 +307,11 @@ a {
   color: #683897;
   background-color: #f7b5e9e3;
   font-family: "Varela Round", Sans-Serif;
-margin-bottom: 1em;
-margin-top: 2%;
-float: right;
-margin-right: 2%;
+  margin-bottom: 1em;
+  margin-top: 2%;
+  float: right;
+  margin-right: 2%;
 }
-
-.dropdown .title{
-	width: 100%;
-  margin-top: 10px;
-  text-align: center;
-}
-
-
-.dropdown .menu{
-	transition: max-height .5s ease-out;
-	max-height: 20em;
-	overflow: hidden;
-}
-.dropdown .menu .option{
-	margin: .3em .3em .3em .3em;
-	margin-top: 0.3em;
-}
-
-.dropdown .menu .option:hover{
-	background: rgba(0,0,0,0.2);
-}
-
-.pointerCursor:hover{
-	cursor: pointer;
-}
-
 
 /*estilos aplicados a las tarjetas de peliculas*/
 .row {
@@ -397,27 +326,21 @@ margin-right: 2%;
 .colum {
   flex: 20%;
   padding: 25px;
-  
 }
 
-.card{
-background: rgba(255, 255, 255, 0.548);
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 3.0px );
--webkit-backdrop-filter: blur( 3.0px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
-text-align: center;
-width: 100%;
-height: 100%;
-margin-bottom: 10px;
-min-width: 200px;
-
-/*width: 300px;
-height: 480px;
-*/
+.card {
+  background: rgba(255, 255, 255, 0.548);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 10px;
+  min-width: 200px;
 }
-
 
 .card:hover {
   transition: all 0.3s ease;
@@ -426,21 +349,18 @@ height: 480px;
   box-shadow: 0 10px 20px #a7619e;
 }
 
-
-
-.btn-card{
-font-family: "Varela Round", Sans-Serif;
-width: auto;
-height: 35px;
-top: -10%;
-float: center;
-position: relative;
-border-radius: 10px;
-text-decoration: bold;
- border-color: #7a5f96;
+.btn-card {
+  font-family: "Varela Round", Sans-Serif;
+  width: auto;
+  height: 35px;
+  top: -10%;
+  float: center;
+  position: relative;
+  border-radius: 10px;
+  text-decoration: bold;
+  border-color: #7a5f96;
   color: #7a5f96;
   background-color: #f7b5ef00;
-
 }
 
 .btn-card:hover {
@@ -450,35 +370,31 @@ text-decoration: bold;
   background-color: #8133ca;
 }
 
-
-.card-body{
-padding: auto;
-position: relative;
+.card-body {
+  padding: auto;
+  position: relative;
 }
 
-.card-title{
-font-family: "Varela Round", Sans-Serif;
-font-size: 16px;
-padding-bottom: 0%;
+.card-title {
+  font-family: "Varela Round", Sans-Serif;
+  font-size: 16px;
+  padding-bottom: 0%;
 }
 
 .img-top {
   width: 80%;
   padding-top: 10px;
-
 }
-
 
 @media (max-width: 550px) {
   .colum {
     flex: 20%;
     min-width: 190px;
   }
-  .header-text{
+  .header-text {
     line-height: 36px;
   }
 }
-
 
 @media (min-width: 810px) {
   .colum {
@@ -486,33 +402,35 @@ padding-bottom: 0%;
   }
 }
 
-.container-header{
+.container-header {
   font-family: "Varela Round", Sans-Serif;
   min-width: 100%;
-  min-height: 30%;
+  min-height: 40%;
   background: linear-gradient(90deg, #b982c2, #f0a7a7, #e7b4d4);
-margin-top: -2%;
-position:relative;
+  margin-top: -2%;
+  position: relative;
+  height: 45%;
+  padding-bottom: 10px;
 }
 
-.header-text{
+.header-text {
   padding-top: 45px;
   color: white;
 }
-.conoce-peliculas{
+.conoce-peliculas {
   color: white;
 }
 
-#totoro-header{
+#totoro-header {
   width: 18%;
   height: 20%;
   float: right;
-  margin-top: -12%;
+  margin-top: -15%;
   margin-right: 5%;
 }
 
-@media (max-width:980px){
-  #totoro-header{
+@media (max-width: 980px) {
+  #totoro-header {
     display: none;
   }
 }
@@ -542,7 +460,6 @@ position:relative;
 
 .barra li {
   transition: 0.3s ease;
-  
 }
 
 .barra-item {
@@ -582,7 +499,6 @@ position:relative;
     min-height: 100%;
     min-width: 40%;
   }
- 
 }
 
 @media (max-width: 650px) {
@@ -591,11 +507,10 @@ position:relative;
     position: relative;
   }
   .barra {
-     margin-top: -15%;
+    margin-top: -15%;
     min-height: 100%;
     min-width: 50%;
   }
-
 }
 
 .barra:hover {
@@ -606,7 +521,7 @@ position:relative;
   padding-bottom: 36px;
   position: absolute;
 
-  background-color: #F2D5F8;
+  background-color: #f2d5f8;
 }
 
 .barra:hover h2 {
@@ -622,7 +537,6 @@ position:relative;
   width: auto;
   height: auto;
   text-decoration: bold;
-  
 }
 
 .barra:hover img {
