--- a/src/style.css
+++ b/src/style.css
@@ -235,8 +235,7 @@
   overflow: scroll;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
-  flex-wrap: wrap;
+  display: none;
 
   margin-bottom: -10%;
 }
