funcionalidades filter y sort boton tipo select sort

--- a/src/style.css
+++ b/src/style.css
@@ -297,7 +297,7 @@
 
 /*estilos al botón de filtrado*/
 
-#BtnFilter {
+#BtnFilter, #BtnSort{
   width: 120px;
   height: 40px;
   border-radius: 15px;
