limpieza de código(nomenclatura de variables y)

--- a/src/style.css
+++ b/src/style.css
@@ -130,7 +130,7 @@
 
 /*estilos al botón de filtrado*/
 
-#BtnFilter, #BtnSort{
+#btnFilter, #btnSort{
   width: 120px;
   height: 40px;
   border-radius: 15px;
