--- a/src/movile.css
+++ b/src/movile.css
@@ -1,3 +1,4 @@
+
 @media (max-width: 1070px) {
   .modalContainer .modal-content {
     width: 70%;
@@ -25,26 +26,17 @@
     height: 40px;
   }
 }
- @media (max-width: 768px) {
-
-     .container-header {
-  font-family: "Varela Round", Sans-Serif;
-  min-width: 100%;
-  min-height: 45%;
-  background: linear-gradient(90deg,#f5bfdf, #ba64f7);
-  top: 0;
-  margin-top: -2%;
-  position: relative;
-  height: 50%;
-  color: #f5f3f5;
-  padding-bottom: 10px;
-}
- }
 
 @media (max-width: 768px) {
-    .vectorial-wave {
-        display: none;
-    }
+
+  .menu-text {
+  display: none;
+}
+
+.menu-icons {
+  flex-direction: row;
+}
+
 
     .container-header {
       background-color: #ba64f7;
