--- a/src/style.css
+++ b/src/style.css
@@ -248,17 +248,32 @@
   padding-left: 5px;
   position: absolute;
   width: 65px;
-  height: 30px;
+  height: 130px;
   top: 0;
- 
   left: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-direction: column;
+
   cursor: pointer;
-  
+  margin-bottom: 35px;
 }
 
+@media (max-width: 768px) {
+  .menu-icons {
+  flex-direction: row;
+  top: -7%;
+  padding-bottom: 15px;
+}
+}
+
+
+.menu-icons .menu-text {
+  color: #ffff;
+  line-height: 5px;
+  padding: 3px;
+}
  .nav-item {
    list-style: none;
    margin: 25px;
